syntax = "proto3";

package ecliptix.proto;
option csharp_namespace = "Ecliptix.Protobuf.CipherPayload";

import "google/protobuf/timestamp.proto";

message CipherPayload {
  uint32 request_id = 1;
  bytes nonce = 2;
  uint32 ratchet_index = 3;
  bytes cipher = 4;
  google.protobuf.Timestamp created_at = 5;
  optional bytes dh_public_key = 6;
}
